Parte 5 - Loading e error

--- a/public/index.html
+++ b/public/index.html
@@ -37,24 +37,11 @@
 
 <body>
     <form action="" id="repo-form">
-        <input type="text" name="repository" id="">
+        <input type="text" name="repository" placeholder="/user/repository">
         <button type="submit">Adicionar</button>
     </form>
 
     <ul id="repo-list">
-        <li>
-            <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" alt="" />
-            <strong>rocketseat.com.br</strong>
-            <p>Tire a sua ideia do papel e dê vida a sua startup.</p>
-            <a href="http://github.com/Rocketseat" target="_blank" rel="noopener noreferrer">acessar</a>
-        </li>
-
-        <li>
-            <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" alt="" />
-            <strong>rocketseat.com.br</strong>
-            <p>Tire a sua ideia do papel e dê vida a sua startup.</p>
-            <a href="http://github.com/Rocketseat" target="_blank" rel="noopener noreferrer">acessar</a>
-        </li>
     </ul>
 
     <script src="bundle.js"></script>
